--- a/details/index.html
+++ b/details/index.html
@@ -17,7 +17,7 @@
   </script>
 </head>
 
-<body class="flex-grow bg-gray-100 dark:bg-darkprimary-200 flex justify-center flex-col min-h-screen">
+<body class="flex-grow bg-gray-100 dark:bg-darkprimary-200 flex justify-center flex-col">
   <nav class="bg-white dark:bg-darkprimary-100 border-gray-200 dark:border-darkprimary-50 border-b shadow-xl">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
       <div class="flex items-center">
@@ -143,7 +143,7 @@
 
           <div class="flex flex-col gap-2 py-4 sm:gap-6 sm:flex-row sm:items-center">
             <p class="w-32 text-lg font-normal text-gray-500 sm:text-right dark:text-gray-400 shrink-0">
-              12:40 - 12:50
+              12:40 - 1:40
             </p>
             <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
               <a href="#" class="hover:underline">Round Two Team Contest</a>
@@ -152,7 +152,7 @@
 
           <div class="flex flex-col gap-2 py-4 sm:gap-6 sm:flex-row sm:items-center">
             <p class="w-32 text-lg font-normal text-gray-500 sm:text-right dark:text-gray-400 shrink-0">
-              1:50 - 2:40
+              1:40 - 2:30
             </p>
             <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
               <a href="#" class="hover:underline">Lunch (Meal and Drinks)</a>
@@ -161,7 +161,16 @@
 
           <div class="flex flex-col gap-2 py-4 sm:gap-6 sm:flex-row sm:items-center">
             <p class="w-32 text-lg font-normal text-gray-500 sm:text-right dark:text-gray-400 shrink-0">
-              3:00 - 4:00
+              2:30 - 2:45 
+            </p>
+            <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
+              <a href="#" class="hover:underline">Transition to Round 3</a>
+            </h3>
+          </div>
+          
+          <div class="flex flex-col gap-2 py-4 sm:gap-6 sm:flex-row sm:items-center">
+            <p class="w-32 text-lg font-normal text-gray-500 sm:text-right dark:text-gray-400 shrink-0">
+              2:45 - 4:00
             </p>
             <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
               <a href="#" class="hover:underline">Round 3</a>
@@ -228,7 +237,7 @@
                 <a href="#">Individual Round</a>
               </h3>
               <span class="text-gray-500 dark:text-gray-400">11:15 - 12:20</span>
-              <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">a round of 20 multiple choice questions. It consists of topics such as geometry, algebra, trigonometry, logic and many more. The total score of the competition is 48 points, with questions ranging from 2 and 3 points. 
+              <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">A round of 20 multiple choice questions. It consists of topics such as geometry, algebra, trigonometry, logic and many more. The total score of the competition is 48 points, with questions ranging from 2 and 3 points. 
               </p>
             </div>
           </div>
@@ -244,7 +253,7 @@
                 <a href="#">Team Round</a>
               </h3>
               <span class="text-gray-500 dark:text-gray-400">12:40 - 12:50</span>
-              <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">team round in which a three-people team would be made by their schools to compete. The questions are composed of 10 multiple choice questions and 10 short-response questions. The score is yet to be decided.              </p>
+              <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">Team round in which a three-people team would be made by their schools to compete. The questions are composed of 10 multiple choice questions and 10 short-response questions. The score is yet to be decided.              </p>
             </div>
           </div>
           <!-- Third box -->
@@ -257,7 +266,7 @@
                 <a href="#">Final Round</a>
               </h3>
               <span class="text-gray-500 dark:text-gray-400">15:00 - 16:00</span>
-              <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">final round in which 10 top scorers (depending on the individual and team score combined) will compete in a podium with speedy questions to determine the final three winners. Each of them will either earn a medal of Bronze, Silver or Gold.</p>
+              <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">Final round in which 10 top scorers (depending on the individual and team score combined) will compete in a podium with speedy questions to determine the final three winners. Each of them will either earn a medal of Bronze, Silver or Gold.</p>
             </div>
           </div>
         
