--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </h1>
     <p
       class=" text-center my-5 mb-8 text-lg font-normal text-gray-500 lg:text-xl sm:px-16 xl:px-48 dark:text-gray-400 justify-center">
-      Sign up for your next math aventure now!
+      Sign up for your next math adventure now!
     </p>
     <div class="flex flex-col mb-8 lg:mb-16 space-y-4 sm:flex-row sm:justify-center sm:space-y-0 sm:space-x-4">
       <a href="https://forms.gle/VRYSyWEF6o7bGLy27"
@@ -231,7 +231,7 @@
 
       <h2 class="text-3xl font-extrabold tracking-tight text-gray-900 dark:text-white ">American School of Barcelona
       </h2>
-      <p class="text-gray-600 dark:text-gray-400 pb-5">Carrer de la Creu Coberta, 1, 08002 Barcelona, Spain</p>
+      <p class="text-gray-600 dark:text-gray-400 pb-5">Carrer de Jaume Balmes, 7, 08950 Esplugues de Llobregat, Barcelona</p>
       <div class="flex-grow rounded-xl shadow z-20">
         <iframe class="rounded-xl shadow w-full h-full"
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2993.5479569694908!2d2.081859076712353!3d41.38390499621011!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a4999f99b49f61%3A0x5ec4bd1415edda09!2sAmerican%20School%20of%20Barcelona%20(ASB)!5e0!3m2!1sen!2ses!4v1681649010923!5m2!1sen!2ses"
