--- a/details/index.html
+++ b/details/index.html
@@ -283,7 +283,7 @@
                 <a href="#">Team Round</a>
               </h3>
               <span class="text-gray-500 dark:text-gray-400">12:40 - 1:40</span>
-              <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">Team round in which a three-people team would be made by their schools to compete. The questions are composed of 10 multiple choice questions and 10 short-response questions. The score is yet to be decided.              </p>
+              <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">Team round in which a three-people team would be made by their schools to compete. The questions are composed of 10 multiple choice questions and 10 short-response questions. The score is 56 points, with questions ranging from 2,3, and 4 points.</p>
             </div>
           </div>
           <!-- Third box -->
@@ -296,7 +296,7 @@
                 <a href="#">Final Round</a>
               </h3>
               <span class="text-gray-500 dark:text-gray-400">2:45 - 4:00</span>
-              <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">Final round in which 10 top scorers (depending on the individual and team score combined) will compete in a podium with speedy questions to determine the final three winners. Each of them will either earn a medal of Bronze, Silver or Gold.</p>
+              <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">Final round in which 10 top scorers (depending on the individual and team scores) will compete in a podium with questions to determine the winners. There are two type of questions, normal rapid calculation questions and a unique type of question called Relay questions.</p>
             </div>
           </div>
         
