--- a/past/index.html
+++ b/past/index.html
@@ -85,10 +85,13 @@
   <section>
     <div class="mx-4 py-8 xl:mx-auto max-w-screen-xl lg:py-16 ">
       <div class="max-w-screen-lg text-gray-500 sm:text-lg dark:text-gray-400">
-        <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">Past Contests
+        <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">Past Contests - 2024
         </h2>
-        <p class="mb-4 font-light">Currently None Avalible. We'll publish our contests immediately after the competition.
-        </p>
+        <a class="mb text-2xl font-light text-indigo-600" href="../assets/LIMC Individual Round 2024.pdf">2024 Indivisual Contest PDF
+        </a>
+        <a>*Quesion 7 is excluded due to confusion.</a>
+        <!-- <p class="mb-4 font-light">We'll publish our contests immediately after the competition.
+        </p> -->
       </div>
     </div>
   </section>
@@ -96,7 +99,7 @@
   <section>
     <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-6">
         <div class="mx-auto max-w-screen-sm text-center">
-            <h1 class="mb-4 text-7xl tracking-tight font-extrabold lg:text-9xl text-primary-600 dark:text-primary-500">423</h1>
+            <!-- <h1 class="mb-4 text-7xl tracking-tight font-extrabold lg:text-9xl text-primary-600 dark:text-primary-500">423</h1> -->
             <p class="mb-4 text-3xl tracking-tight font-bold text-gray-900 md:text-4xl dark:text-white">We'll publish our contests immediately after the competition</p>
             <p class="mb-4 text-lg font-light text-gray-500 dark:text-gray-400">Sorry, we can't show you this yet.  It's like looking for the last digit of Pi. You'll find lots to explore on the home page. </p>
             <a href="/" 
