--- a/past/index.html
+++ b/past/index.html
@@ -89,7 +89,7 @@
         </h2>
         <a class="mb text-2xl font-light text-indigo-600" href="https://drive.google.com/file/d/1dfzlmhQbIz4ngUyhALthV9CnZpAdH16U/view?usp=sharing">2024 Individual Contest PDF
         </a>
-        <a>*Quesion 7 is excluded due to confusion.</a>
+        <a>*Question 7 is excluded due to confusion.</a>
         <!-- <p class="mb-4 font-light">We'll publish our contests immediately after the competition.
         </p> -->
       </div>
