--- a/past/index.html
+++ b/past/index.html
@@ -90,6 +90,8 @@
         <a class="mb text-2xl font-light text-indigo-600" href="https://drive.google.com/file/d/1dfzlmhQbIz4ngUyhALthV9CnZpAdH16U/view?usp=sharing">2024 Individual Contest PDF
         </a>
         <a>*Question 7 is excluded due to confusion.</a>
+        <br>
+        <a class="mb text-2xl font-light text-indigo-600" href="https://drive.google.com/file/d/1CkOG5MrV2UFNSAMbGOgNVe6exL1NFfAs/view?usp=sharing">2024 Team Contest PDF
         <!-- <p class="mb-4 font-light">We'll publish our contests immediately after the competition.
         </p> -->
       </div>
