--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
     </h1>
     <p
       class=" text-center my-5 mb-8 text-lg font-normal text-gray-500 lg:text-xl sm:px-16 xl:px-48 dark:text-gray-400 justify-center">
-      Sign up for your next math adventure now!
+      We hope to see you again soon!
     </p>
     <div class="flex flex-col mb-8 lg:mb-16 space-y-4 sm:flex-row sm:justify-center sm:space-y-0 sm:space-x-4">
-      <a href="https://forms.gle/VRYSyWEF6o7bGLy27"
+      <!-- <a href="https://forms.gle/VRYSyWEF6o7bGLy27"
         class="bg-gradient-to-tr from-primary-500 to-primary-600 hover:scale-110 transition-all duration-500 inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-xl bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:focus:ring-primary-900">
         Sign Up
         <svg class="ml-2 -mr-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
@@ -103,7 +103,7 @@
             d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z"
             clip-rule="evenodd"></path>
         </svg>
-      </a>
+      </a> -->
       <a href="./details/"
         class="hover:scale-110 transition-all duration-500 inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-gray-900 rounded-xl border-2 border-gray-300 focus:ring-4 focus:ring-gray-100 dark:text-white dark:border-gray-700 dark:hover:bg-gray-700 dark:focus:ring-gray-800">
 
@@ -141,11 +141,11 @@
     class="mb-4 pointer-events-auto group overflow-clip max-w-screen-xl xl:mx-auto mx-4 bg-white dark:bg-darkprimary-100 rounded-xl shadow border dark:border-darkprimary-50">
 
     <div class="items-center py-8 px-4 text-center lg:py-16 lg:px-12">
-      <a href="#myForm"
+      <a href="./past/"
         class="border-2 dark:border-gray-500 inline-flex justify-between items-center py-1 px-1 pr-4 mb-7 text-sm text-gray-700 bg-gray-100 rounded-full dark:bg-gray-800 dark:text-white hover:bg-gray-200 dark:hover:bg-gray-700"
         role="alert">
         <span class="text-gray-900 text-xs bg-primary-500 rounded-full dark:text-white px-4 py-1.5 mr-3">New</span>
-        <span class="text-sm font-medium">LIMC 2024 Registration is Out!</span>
+        <span class="text-sm font-medium">LIMC 2024 just finished!</span>
         <svg class="ml-2 w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
           <path fill-rule="evenodd"
             d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
@@ -195,7 +195,7 @@
 
   <section class="flex md:flex-row flex-col  max-w-screen-xl xl:mx-auto mx-4 gap-4 xl:w-full">
     <div style="overflow-clip-margin: 1px;"
-      class=" dark:bg-darkprimary-100 group overflow-clip rounded-xl p-20 bg-white shadow border dark:border-darkprimary-50 "
+      class=" dark:bg-darkprimary-100 group overflow-clip rounded-xl p-20 bg-white shadow border dark:border-darkprimary-50 max-w-[500px]"
       data-tilt data-tilt-perspective="700" data-tilt-speed="1000" data-tilt-transition="true" data-tilt-max="1"
       id="myForm">
       <div id="blur-div-2"
@@ -203,19 +203,17 @@
       </div>
 
       <div class="relative">
-        <h2 class="text-3xl font-extrabold tracking-tight text-gray-900 dark:text-white">Sign up</h2>
+        <h2 class="text-3xl font-extrabold tracking-tight text-gray-900 dark:text-white">Updates</h2>
         <br>
         <p class="text-gray-600 dark:text-gray-400 pb-5">
-          Having trouble signing up? <a href="/about/" class="text-primary-500">Contact Us</a>
+          Sign up is currently close! Sign up for updates on next year's competition. Having trouble signing up? <a href="/about/" class="text-primary-500">Contact Us</a>
         </p>
-        <p class="text-gray-600 dark:text-gray-400 pb-5">
-          Make sure to read the details page before signing up <a href="/details/" class="text-primary-500">Details</a>
-        </p>
+
       </div>
 
       <br><br>
 
-      <a href="https://forms.gle/VRYSyWEF6o7bGLy27"
+      <a href="https://forms.gle/b5RWaNgnqNEFkaK68"
       class="bg-gradient-to-tr from-primary-500 to-primary-600 hover:scale-110 transition-all duration-500 inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-xl bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:focus:ring-primary-900">
       Sign Up
       <svg class="ml-2 -mr-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
