--- a/past/index.html
+++ b/past/index.html
@@ -83,22 +83,31 @@
 
 
   <section>
-    <div class="mx-4 py-8 xl:mx-auto max-w-screen-xl lg:py-16 ">
+    <div class="mx-4 py-4 xl:mx-auto max-w-screen-xl lg:py-16 ">
       <div class="max-w-screen-lg text-gray-500 sm:text-lg dark:text-gray-400">
-        <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">Past Contests - 2024
+        <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">LIMC - 2024
         </h2>
         <a class="mb text-2xl font-light text-indigo-600" href="https://drive.google.com/file/d/1dfzlmhQbIz4ngUyhALthV9CnZpAdH16U/view?usp=sharing">2024 Individual Contest PDF
         </a>
         <a>*Question 7 is excluded due to confusion.</a>
         <!-- use LIMC Team Round 2024.svg as a graph here -->
         <br>
-        <a class="text-2xl">Score Graph</a>
-        <img src = "../assets/LIMC Individual Round 2024.svg" alt="My Happy SVG"/>
-
-        <br>
         <a class="mb text-2xl font-light text-indigo-600" href="https://drive.google.com/file/d/1CkOG5MrV2UFNSAMbGOgNVe6exL1NFfAs/view?usp=sharing">2024 Team Contest PDF
         <!-- <p class="mb-4 font-light">We'll publish our contests immediately after the competition.
         </p> -->
+        <br>
+        <a class="text-2xl">Individual Score Graph</a>
+        <img src="../assets/LIMC Individual Round 2024.svg" alt="My Happy SVG" class="dark:hidden" />
+        <img src="../assets/LIMC Individual Round 2024 Dark.svg" alt="My Happy SVG" class="hidden dark:block" />
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <div class="mx-4 py-4 xl:mx-auto max-w-screen-xl lg:py-16 ">
+      <div class="max-w-screen-lg text-gray-500 sm:text-lg dark:text-gray-400">
+        <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">LIMC - 2025
+        </h2>
       </div>
     </div>
   </section>
