--- a/details/index.html
+++ b/details/index.html
@@ -88,7 +88,7 @@
         <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">LIMC 2025 Details
         </h2>
         <p class="mb-4 font-light">We are working on the next event! We will provide details when ready. Meanwhile you can sign up for updates or check out details of past events</p>
-        <a href="https://forms.gle/VRYSyWEF6o7bGLy27" class="inline-flex items-center font-medium text-primary-600 hover:text-primary-800 dark:text-primary-500 dark:hover:text-primary-700">
+        <a href="https://forms.gle/b5RWaNgnqNEFkaK687" class="inline-flex items-center font-medium text-primary-600 hover:text-primary-800 dark:text-primary-500 dark:hover:text-primary-700">
           Sign Up for Updates
           <svg class="ml-1 w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd"></path></svg>
         </a>
